--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 body {
+	background-color:#CFCFFF;
 	margin:0;
+	font-family:sans-serif;
 }
 div#container {
+	background-color:white;
 	width:800px;
 	margin:0 auto;
 	border-left:1px solid grey;
@@ -17,12 +20,15 @@ div#header {
 	background-image:url('header.jpg');
 	background-repeat:no-repeat;
 	height:85px;
-	padding:15px 0 0 20px;
+	padding:15px 10px 0 20px;
 	text-align:right;
 }
-div#nav {
+div.nav {
 	height:30px;
 	padding:5px 15px 0;
+}
+div.nav tr {
+	width:800px;
 }
 div#leftnav {
 	float:left;
@@ -41,7 +47,7 @@ div#footer {
 }
 table#kalender td {
 	width:100px;
-	height:400px;
+	height:480px;
 	background:#eee;
 	vertical-align:top;
 }
@@ -49,17 +55,19 @@ table#kalender {
 	float:right;
 }
 ul#zeit {
+	font-size:14px;
 	width:45px;
 	float:left;
 	list-style:none;
 	padding:0;
 	text-align:right;
+	margin-top:27px;
 }
 ul#zeit li {
-	margin-bottom:10px;
+	height:40px;
 }
 div#kalcontainer {
-	height:430px;
+	height:500px;
 	width:100%;
 }
 #pup {
